Finish polishing of discogs and butler module